# relohelper-data

./: .gitignore  10_scraping_climate.py  1_country_codes.ipynb  2_numbeo_cities.ipynb  3_merge_2023_data.ipynb  4.1_cities_to_bd.ipynb  4_add_geonames.ipynb  5_numbeo_countries.ipynb  6_legatum.ipynb  7_preparations scraping climate.ipynb  8_create_numbeo_tables.py  8_create_numbeo_tables_rewritten.py  8_create_numbeo_tables_rewritten_2.py  8_create_numbeo_tables_rewritten_3.py  9_scraping_numbeo_stats.py  9_scraping_numbeo_stats_manual.py  9_scraping_numbeo_stats_rewritten.py  README.md  climate_merge.ipynb  post_audit.ipynb  pyproject.toml  pyrightconfig.json  scraping_climate.py  scraping_climate_updated.py  scraping_climate_updated_2.py  test.ipynb  test_scrap_weather.ipynb
data/: Dataset_Legatum_Prosperity_Index_2023.csv  climate_links.pkl  correct_urls.json  geonameid.pkl  matched_df_2026.pkl  missing_climate_links.pkl  numbeo_links_2026.pkl  total-population-by-country-2026.csv
data/2023/: numbeo_links.pkl  numbeo_links_other.pkl  numbeo_links_usa.pkl
sql/: create_avg_climate.sql  create_month.sql  create_numbeo_category.sql  create_numbeo_city_costs.sql  create_numbeo_cost_categories.sql  create_numbeo_cost_params.sql  create_numbeo_param.sql  create_numbeo_stat.sql  insert_numbeo_cost_params_summary.sql  insert_numbeo_param_summary.sql
