[project]
name = "relo-scraping"
version = "0.1.0"
description = "Numbeo and climate data scrapers for the relocation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[tool.uv]
package = false
